# CG-assessment

./: .gitignore  CMakeLists.txt  README.md
OBJs/Car/: alfa.gltf
OBJs/Doors/: door1.gltf  door2.gltf
OBJs/Room/: Room.gltf
OBJs/ferrari_312/: ferrari_312.gltf
OBJs/ferrari_312t/: ferrari_312t.gltf
OBJs/lotus/: lotus.gltf
OBJs/lotus49/: lotus49.gltf
OBJs/lotus72D/: lotus72D.gltf
OBJs/lotus98t/: lotus98t.gltf
OBJs/mazda/: mx5.gltf
OBJs/platform/: platform.gltf
OBJs/sf70h/: sf70h.gltf
OBJs/wood/: wood.gltf
cmake/: CPM.cmake
include/: AnimationBehaviours.h  IBL.h  Mesh.h  Model.h  Object.h  camera.h  glsl.hpp  my_class.hpp  shader.h
shaders/: fragpbr.frag  fragprefilter.frag
src/: AnimationBehaviours.cpp  IBL.cpp  Object.cpp  glsl.cpp  main.cpp  my_class.cpp
